--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <link rel="stylesheet" type="text/css" href="style.css" />	
-    <title>Free Gift</title>
+    <title>SIGN UP!</title>
     <META name="Description" content="desc">
     <META name="keywords" content="keywords">
     <style>
