--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 
 	
 	
-<form method="post" class="af-form-wrapper" action="http://www.aweber.com/scripts/addlead.pl">
+<form method="post" class="" action="">
+	
 <div style="display: none;">
-<input type="hidden" name="meta_web_form_id" value="1698355733" />
+<input type="hidden" name="meta_web_form_id" value="" />
 <input type="hidden" name="meta_split_id" value="" />
 <input type="hidden" name="listname" value="yourlist" />
 <input type="hidden" name="redirect" value="http://cssround.com/redirect.html" />
@@ -54,7 +55,9 @@
                 <input type="text" name=name onClick="this.value='';" class=inp2 value="Put Your Name Here" style="background-color:#fff;">
                 <input type="text" name=email onClick="this.value='';" class=inp value="Put Your BEST Email Here" style="background-color:#fff;">
                <input type="submit" class="classname" value="Get Instant Access" style="cursor:pointer;">
-            </form>
+               
+
+</form>
 
 
     </div></center>
