--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
 	
     <div class=head2>Put your best email below to receive instant access now!</div>
     
-
+    
+/*------------------------------------------- FORM ----------------------------------------- */
 	
 	
-<form method="post" class="" action="">
+			<form method="post" class="" action="">
 	
 <div style="display: none;">
 <input type="hidden" name="meta_web_form_id" value="" />
