--- a/index.html
+++ b/index.html
@@ -48,18 +48,20 @@
 			<form method="post" class="" action="">
 	
 <div style="display: none;">
+	
 <input type="hidden" name="meta_web_form_id" value="" />
 <input type="hidden" name="meta_split_id" value="" />
 <input type="hidden" name="listname" value="yourlist" />
-<input type="hidden" name="redirect" value="http://cssround.com/redirect.html" />
+<input type="hidden" name="redirect" value="" />
 <input type="hidden" name="meta_message" value="1" />
 <input type="hidden" name="meta_required" value="email" />
 <input type="hidden" name="meta_tooltip" value="" />
+
 </div>
 
-                <input type="text" name=name onClick="this.value='';" class=inp2 value="Put Your Name Here" style="background-color:#fff;">
-                <input type="text" name=email onClick="this.value='';" class=inp value="Put Your BEST Email Here" style="background-color:#fff;">
-               <input type="submit" class="classname" value="Get Instant Access" style="cursor:pointer;">
+<input type="text" name=name onClick="this.value='';" class=inp2 value="Put Your Name Here" style="background-color:#fff;">
+<input type="text" name=email onClick="this.value='';" class=inp value="Put Your BEST Email Here" style="background-color:#fff;">
+<input type="submit" class="classname" value="Get Instant Access" style="cursor:pointer;">
                
 
 </form>
